# ratatoskr

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  Makefile.am  README.md  SECURITY.md  configure  configure.ac
doc/: Doxyfile.in  JSON-RPC-interface.md  README.md  README_doxygen.md  README_windows.txt  REST-interface.md  benchmarking.md  build-freebsd.md  build-netbsd.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  cjdns.md  developer-notes.md  discord-teaser.md  dnsseed-policy.md  evodb-verify-repair.md  external-signer.md  files.md  fuzzing.md  guix.md  i2p.md  init.md  keygen-ceremony-2026-05-22.md  launch-announcement.md  launch-day-runbook.md  launch-outreach.md  launch-schedule.md  managing-wallets.md  masternode-budget.md  masternode-setup.md  mining.md  multisig-tutorial.md  p2p-bad-ports.md  pool-operator-spec.md  productivity.md  quickstart.md  ratatoskr-conf.md  reduce-memory.md  (+17 more)
doc/man/: Makefile.am
share/: setup.nsi.in
src/: Makefile.am  Makefile.qt.include  Makefile.qttest.include  addressindex.cpp  addressindex.h  bitcoin-cli.cpp  bitcoin-tx.cpp  bitcoin-util.cpp  bitcoin-wallet.cpp  bitcoind.cpp  cachemultimap.h  chainparams.cpp  chainparams.h  chainparamsbase.h  chainparamsseeds.h  clientversion.cpp  clientversion.h  hash.h  init.cpp  init.h  logging.cpp  messagesigner.h  net.cpp  net_processing.cpp  netfulfilledman.cpp  netfulfilledman.h  noui.cpp  ratatoskr-cli-res.rc  ratatoskr-tx-res.rc  ratatoskr-wallet-res.rc  ratatoskrd-res.rc  saltedhasher.cpp  serialize.h  spork.cpp  spork.h  txdb.cpp  unordered_lru_cache.h  (+2 more)
(+319 files in other folders)
