dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=ratatoskrd.1
endif

if ENABLE_QT
  dist_man1_MANS+=ratatoskr-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=ratatoskr-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=ratatoskr-tx.1
endif

if BUILD_BITCOIN_UTIL
  dist_man1_MANS+=bitcoin-util.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=ratatoskr-wallet.1
endif
endif
